name:                hashids
version:             1.0.2.5
synopsis:            Hashids generates short, unique, non-sequential ids from numbers.
description:         This is a Haskell port of the Hashids library. It is typically used to encode numbers to a format suitable to appear in visible places like urls. It converts numbers like 347 into strings like yr8, or a list of numbers like [27, 986] into 3kTMd. You can also decode those ids back. This is useful in bundling several parameters into one.
homepage:            http://hashids.org/
license:             MIT
license-file:        LICENSE
author:              Johannes Hildén
maintainer:          hildenjohannes@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  test/testdata/*.txt
cabal-version:       >=1.10

library
  exposed-modules:     Web.Hashids
  build-depends:       base
                     , bytestring
                     , containers
                     , split

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hashids-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       Test.Web.Hashids.Gen
                       Test.Web.Hashids.Property
  build-depends:       base
                     , bytestring
                     , containers
                     , hashids
                     , hedgehog
                     , split

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded

Source-Repository head
  type: git
  location: https://github.com/laserpants/hashids-haskell
